--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-    <script src="/js/task-1.js" type="module"></script>
-    <script src="/js/task-2.js" type="module"></script>
-    <script src="/js/task-3.js" type="module"></script>
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
 </body>
 
 </html>
